--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,7 +2,7 @@
     font-size: 24px;
     font-weight: 400;
     color: rgba(255, 255, 255, 1);
-    line-height: 28PX;
+    line-height: 28px;
     font-style: normal;
 }
 
@@ -10,6 +10,6 @@
        
     .header__lang-link {
         font-size: 18px;
-        line-height: 20PX;
+        line-height: 20px;
     }
 }
