--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,5 @@
 .cover {
-    height: 740px;
+    min-height: 740px;
     margin: 0 auto;
     width: 100%;
     box-sizing: border-box;
@@ -23,7 +23,7 @@
     bottom: 0;
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-color: #2A2C2F;
     opacity: 0.3;
     z-index: 1;
     transition: opacity 0.5s linear;
@@ -37,7 +37,7 @@
 
     .cover {
         max-width: 1024px;
-        height: 640px;
+        min-height: 640px;
     }
 }
 
@@ -45,7 +45,7 @@
 
     .cover {
         max-width: 768px;
-        height: 480px;
+        min-height: 480px;
     }
 }
 
@@ -61,6 +61,6 @@
 @media screen and (max-width: 578px) {
          
     .cover{
-        height: 200px;
+        min-height: 200px;
     }
 }
