--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -12,7 +12,7 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 927px) {
   
     .intro {
         max-width: 720px;
@@ -20,3 +20,11 @@
         margin: auto;
     }
 }
+
+@media screen and (max-width: 767px) {
+  
+    .intro {
+        max-width: 288px;
+        padding: 64px 0 0;
+        margin: auto; 
+    }
