--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -17,6 +17,12 @@
     }
 }
 
+@media screen and (max-width: 927px) {
+    .page {
+        padding: 28px 0 0 0;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .page {
         padding: 0;
