--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,4 +1,5 @@
 .photo-grid {
+    justify-content: center;
     margin: auto;
     padding-top: 92px;
     max-width: 1184px;
@@ -17,6 +18,15 @@
         grid-template-rows: repeat(4, 1fr);
     }
 }
+
+@media screen and (max-width: 927px) {
+    .photo-grid {
+        padding-top: 88px;
+        grid-template-columns: repeat(auto-fit, 352px);
+        gap: 16px;
+    }
+}
+
 
 @media screen and (max-width: 767px) {
       
