--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -13,7 +13,7 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 927px) {
 
     .place__image {
         max-width: 100%;
@@ -26,5 +26,6 @@
     .place__image {
         max-width: 320px;
         min-height: 320px;
+        justify-self: center;
     }
 }
