--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,12 +4,13 @@
     font-family: "Inter","Intel","Arial","Helvetica", sans-serif;
     max-width: 1280px;
     min-width: 320px;
-    background-color: rgba(42, 44, 47, 1);
+    background-color: #2A2C2F;
     padding: 28px 48px 28px 48px;
     margin: auto;
     color: rgba(255, 255, 255, 1);
     box-sizing: border-box;
-}
+    
+}    
 
 @media screen and (max-width: 1024px) {
     .page {
