--- a/pages/index.css
+++ b/pages/index.css
@@ -1,10 +1,10 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
 @import url(../blocks/pages/pages.css);
-@import url(../blocks/cover/__background/cover__background.css);
+/* @import url(../blocks/cover/__background/cover__background.css); */
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__title/cover__title.css);
-@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__link/cover__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/footer.css);
@@ -16,10 +16,10 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/intro/__list/intro__list.css);
-@import url(../blocks/intro/__lists/__lists_number/intro__lists_number.css);
 @import url(../blocks/intro/__lists/intro__lists.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__number/intro__number.css);
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/lead/__images/lead__images.css);
@@ -32,7 +32,6 @@
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__link/place__link.css);
-@import url(../blocks/place/__links/place__links.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 @import url(../blocks/place/__paragraphs/place__paragraphs.css);
 @import url(../blocks/place/__title/place__title.css);
