--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,6 +6,9 @@
     line-height: 18px;
     text-decoration-line: none;
 }
+.footer__link:hover {
+    opacity: 0.8;
+} 
 
 @media screen and (max-width: 578px) {
                 
