--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,6 +6,10 @@
     font-style: normal;
 }
 
+.header__lang-link:hover {
+    opacity: 0.8;
+}
+
 @media screen and (max-width: 767px) {
        
     .header__lang-link {
